--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,12 @@
 
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
 
-   <!-- <queries>
+    <queries>
         <intent>
             <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
         </intent>
-    </queries>-->
+    </queries>
 
     <application
         android:allowBackup="true"
