--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
 
+    <uses-permission android:name="android.permission.DELETE_PACKAGES"/>
+
     <queries>
         <intent>
             <action android:name="android.intent.action.MAIN" />
